--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "jest": "^27.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
-    "mongoose-float": "^1.0.4"
+    "mongoose-float": "^1.0.4",
+    "config": "^1.30.0"
+  },
+  "devDependencies": {
+    "nodemailer": "^6.4.3"
   }
 }
